# avm

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
docs/: INSTALLATION.md  QUICK_REFERENCE.md  SAMPLE_DATA.md  TECHNICAL_SPECS.md  VIDEO_STITCHING.md
scripts/: build.sh  clean.sh  process_video.ps1  process_video.sh  run.sh
src/: avm.cpp
